# session6_assignment-razan

./: README.md
session6_assignment/install/: local_setup.sh  setup.sh
session6_assignment/install/customized_interfaces/share/customized_interfaces/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
session6_assignment/install/customized_interfaces/share/customized_interfaces/action/: DeliveryItem.action
session6_assignment/install/customized_interfaces/share/customized_interfaces/cmake/: ament_cmake_export_include_directories-extras.cmake  customized_interfacesConfig.cmake  customized_interfaces__rosidl_typesupport_cExport-noconfig.cmake  (+12 more)
session6_assignment/install/warehouse_robot/lib/warehouse_robot/: Item_delivery_action_client  Item_delivery_action_server  stock_checker_client  stock_checker_server  stock_checker_service_client  stock_checker_service_server
session6_assignment/install/warehouse_robot/share/warehouse_robot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
session6_assignment/log/: latest_build
session6_assignment/src/customized_interfaces/: CMakeLists.txt  package.xml
session6_assignment/src/customized_interfaces/srv/: CheckStock.srv
session6_assignment/src/warehouse_robot/: package.xml  setup.py
session6_assignment/src/warehouse_robot/launch/: warehouse_robot_launch.py
session6_assignment/src/warehouse_robot/warehouse_robot/: Item_delivery_action_client.py  Item_delivery_action_server.py  stock_checker_service_client.py  stock_checker_service_server.py
(+24 files in other folders)
